--- a/src/stylesheets/FullPage.scss
+++ b/src/stylesheets/FullPage.scss
@@ -1,12 +1,15 @@
+@import './Global.scss';
+
+
 /* #region ==================== VARIABLES ==================== */
 
-$body-width: 50vw;
-$body-min-width: 820px;
-// $body-max-width: 1200px;
-$body-max-width: 960px;
+// $body-width: 50vw;
+// $body-min-width: 820px;
+// // $body-max-width: 1200px;
+// $body-max-width: 960px;
 
-// $workkNav-height: 80px;
-$workkNav-height: 100px;
+// // $workkNav-height: 80px;
+// $workkNav-height: 100px;
 
 /* #endregion ==================== VARIABLES ==================== */
 
@@ -18,15 +21,15 @@ $workkNav-height: 100px;
 //     border-bottom: 1px solid grey;
 // }
 
-.fullPage {
-    // border: 2px solid #ff0000;
+// .fullPage {
+//     // border: 2px solid #ff0000;
 
-    width: 100vw;
-    // height: 100%;
+//     width: 100vw;
+//     // height: 100%;
 
-    margin: 0;
-    padding: 0;
-}
+//     margin: 0;
+//     padding: 0;
+// }
 
 // .wrapper {
 //     width: 600px;
