HEADER , WORK, ABOUT, RESUME: responsive... but still need work CONTACT: committed 09/12/20, start of layout ONLY (it still doesn't do anything)

--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -293,7 +293,8 @@
 
             width: 95vw;
 
-            margin: 80px auto 0 auto;
+            // margin: 80px auto 0 auto;
+            margin: 110px auto 0 auto;
 
             left: 2.5vw;
 
@@ -348,7 +349,7 @@
                     // border: 2px solid #0000ff;
 
                     // width: 3.75vw;
-                    width: 5.5%;
+                    width: 7.5%;
                 }
             }
 
