--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -26,7 +26,7 @@
     position: fixed;
     z-index: 999;
 
-    /* #region -------------------- hed -------------------- */
+    /* #region -------------------- .hed -------------------- */
 
     .hed {
         // border: 02px solid #0000ff;
@@ -48,6 +48,7 @@
             // border: 02px solid #ff00ff;
 
             font-size: 30px;
+            line-height: 1em;
 
             width: auto;
             height: inherit;
@@ -60,7 +61,8 @@
             // left: 50px;
 
             position: absolute;
-            bottom: -17.5%;
+            // bottom: -17.5%;
+            bottom: -37.5%;
             left: 35px;
 
             // display: table-cell;
@@ -98,7 +100,8 @@
             // top: 9.5px;
             // left: 159px;
             // left: 140px;
-            bottom: -17.5%;
+            // bottom: -17.5%;
+            bottom: -16.25%;
             right: 0;
             // right: -80px;
 
@@ -136,57 +139,62 @@
 
             // cursor: pointer;
 
-            // -------------------- logoIcon / afro --------------------
+
+            /* #region -------------------- .logoIcon: clipping paths -------------------- */
+
+            // -------------------- .logoIcon / afro --------------------
 
             #shigeru_logo_afro_k {
                 // fill: #00ff00;
 
-                clip-path: url(#shigeru_logo_afro_k_mask);
-                -webkit-clip-path: url(#shigeru_logo_afro_k_mask);
+                clip-path: url(#shigeru_logo_afro_k_clip);
+                -webkit-clip-path: url(#shigeru_logo_afro_k_clip);
             }
 
             #shigeru_logo_afro_w {
                 // fill: #0000ff;
-                fill: #ffffff;
+                // fill: #ffffff;
 
-                clip-path: url(#shigeru_logo_afro_w_mask);
-                -webkit-clip-path: url(#shigeru_logo_afro_w_mask);
+                clip-path: url(#shigeru_logo_afro_w_clip);
+                -webkit-clip-path: url(#shigeru_logo_afro_w_clip);
             }
 
-            // -------------------- logoIcon / glasses --------------------
+            // -------------------- .logoIcon / glasses --------------------
 
             #shigeru_logo_glasses_k {
                 // fill: #00ff00
 
-                clip-path: url(#shigeru_logo_glasses_k_mask);
-                -webkit-clip-path: url(#shigeru_logo_glasses_k_mask);
+                clip-path: url(#shigeru_logo_glasses_k_clip);
+                -webkit-clip-path: url(#shigeru_logo_glasses_k_clip);
             }
 
             #shigeru_logo_glasses_w {
                 // fill: #0000ff;
-                fill: #ffffff;
+                // fill: #ffffff;
 
-                clip-path: url(#shigeru_logo_glasses_w_mask);
-                -webkit-clip-path: url(#shigeru_logo_glasses_w_mask);
+                clip-path: url(#shigeru_logo_glasses_w_clip);
+                -webkit-clip-path: url(#shigeru_logo_glasses_w_clip);
             }
 
-            // -------------------- logoIcon / kanji --------------------
+            // -------------------- .logoIcon / kanji --------------------
 
             #shigeru_logo_kanji_w {
                 // fill: #ff00ff;
-                fill: #ffffff;
+                // fill: #ffffff;
 
-                // clip-path: url(#header_mask);
-                clip-path: url(#shigeru_logo_kanji_w_mask);
-                -webkit-clip-path: url(#shigeru_logo_kanji_w_mask);
+                // clip-path: url(#header_clip);
+                clip-path: url(#shigeru_logo_kanji_w_clip);
+                -webkit-clip-path: url(#shigeru_logo_kanji_w_clip);
             }
+
+            /* #endregion -------------------- .logoIcon: clipping paths -------------------- */
         }
     }
 
-    /* #endregion -------------------- hed -------------------- */
+    /* #endregion -------------------- .hed -------------------- */
 
 
-    /* #region -------------------- navBarContainer -------------------- */
+    /* #region -------------------- .navBarContainer -------------------- */
 
     .navBarContainer {
         // border: 2px solid #00ff00;
@@ -210,7 +218,131 @@
         // display: table;
 
 
-        /* #region -------------------- workNav -------------------- */
+        /* #region -------------------- .navBar -------------------- */
+
+        .navBar {
+            // border: 2px solid #0000ff;
+            // border-top: 1px solid #cccccc;
+            // border-bottom: 1px solid #cccccc;
+
+            // background: #ffffff;
+            // background: none;
+            @include navbgGradient01();
+            // @include navbgGradient02();
+
+            // color: #ffffff;
+            color: #000000;
+            font-size: 1.125em;
+            text-align: center;
+
+            // width: 70%;
+            width: 50%;
+            height: $navBar-height;
+
+            margin: 0 auto;
+            // padding: 0;
+
+            display: grid;
+            // grid-template-columns: repeat(6, 16.666666666666667%);
+            // grid-template-columns: repeat(6, auto);
+            grid-template-columns: repeat(5, auto);
+            column-gap: 0;
+            align-items: center;
+
+            // position: absolute;
+            // top: $header-height;
+
+            .navItem {
+                // border: 2px inset #ffff00;
+                // border-right: 1px solid #cccccc;
+
+                // background: none;
+
+                color: inherit;
+                text-decoration: none;
+
+                height: inherit;
+
+                // margin: 0;
+                // padding: 0;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                /* #region - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
+
+                // :link {
+                //     color: #00ff00;
+                // }
+
+                // :visited {
+                //     color: #ff00ff;
+                // }
+
+                // :hover {
+                //     color: #ff0000;
+                // }
+
+                // :active {
+                //     background: #eeeeee;
+                //     color: #00ff00;
+                // }
+
+                /* #endregion - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
+            }
+
+            /* #region - - - - - - - - - - - .navItem: Ferda A separators... doesn't work here - - - - - - - - - - - */
+
+            // // A:before {
+            // .navItem:before {
+            // // .navItem:after {
+            //     border: 2px inset #ff0000;
+            //     // border-left: 0.5px solid #cccccc;
+            //     // border-right: 0.5px solid #cccccc;
+
+            //     content: "";
+            //     width: 100%;
+            //     height: 40%;
+
+            //     position: absolute;
+            //     left: 0;
+            //     right: 0;
+            //     // top: 30%;
+            //     top: $header-height + $navBar-height/3;
+            //     bottom: 0;
+            // }
+
+            /* #endregion - - - - - - - - - - - navItem: Ferda A separators... doesn't work here - - - - - - - - - - - */
+
+
+            .activeNavDiv {
+                // border: 2px inset #00ffff;
+
+                // @include navbgGradient01();
+                // @include navbgGradient02();
+                @include navbgGradient03();
+                // mix-blend-mode: multiply;
+
+                color: #ff0000;
+                text-align: center;
+
+                // width: auto;
+                // height: $navBar-height;
+                height: inherit;
+
+                position: absolute;
+                // top: $header-height;
+                left: 0;
+                // left: 50vw;
+                // z-index: -1;
+            }
+        }
+
+        /* #endregion -------------------- .navBar -------------------- */
+
+
+        /* #region -------------------- .workNav -------------------- */
 
         .workNav {
             // border: 1px solid #ff00ff;
@@ -282,7 +414,7 @@
                 }
             }
 
-            /* #region - - - - - - - - - - - Ferda A separators... - - - - - - - - - - - */
+            /* #region - - - - - - - - - - - .employerIcon: Ferda A separators... - - - - - - - - - - - */
 
             .employerIcon:before {
                 border-left: 0.5px solid #cccccc;
@@ -299,137 +431,13 @@
                 bottom: 0;
             }
 
-            /* #endregion - - - - - - - - - - - Ferda A separators... - - - - - - - - - - - */
+            /* #endregion - - - - - - - - - - - .employerIcon: Ferda A separators... - - - - - - - - - - - */
         }
 
-        /* #endregion -------------------- workNav -------------------- */
-
-
-        /* #region -------------------- navBar -------------------- */
-
-        .navBar {
-            // border: 2px solid #0000ff;
-            // border-top: 1px solid #cccccc;
-            // border-bottom: 1px solid #cccccc;
-
-            // background: #ffffff;
-            // background: none;
-            @include navbgGradient01();
-            // @include navbgGradient02();
-
-            // color: #ffffff;
-            color: #000000;
-            font-size: 1.125em;
-            text-align: center;
-
-            // width: 70%;
-            width: 50%;
-            height: $navBar-height;
-
-            margin: 0 auto;
-            // padding: 0;
-
-            display: grid;
-            // grid-template-columns: repeat(6, 16.666666666666667%);
-            // grid-template-columns: repeat(6, auto);
-            grid-template-columns: repeat(5, auto);
-            column-gap: 0;
-            align-items: center;
-
-            // position: absolute;
-            // top: $header-height;
-
-            // A {
-            .navItem {
-                // border: 2px inset #ffff00;
-                // border-right: 1px solid #cccccc;
-
-                // background: none;
-
-                color: inherit;
-                text-decoration: none;
-
-                height: inherit;
-
-                // margin: 0;
-                // padding: 0;
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                /* #region - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
-
-                // :link {
-                //     color: #00ff00;
-                // }
-
-                // :visited {
-                //     color: #ff00ff;
-                // }
-
-                // :hover {
-                //     color: #ff0000;
-                // }
-
-                // :active {
-                //     background: #eeeeee;
-                //     color: #00ff00;
-                // }
-
-                /* #endregion - - - - - - - - - - - A: link behavior - - - - - - - - - - - */
-            }
-
-            .activeNavDiv {
-                // border: 2px inset #00ffff;
-
-                // @include navbgGradient01();
-                // @include navbgGradient02();
-                @include navbgGradient03();
-                // mix-blend-mode: multiply;
-
-                color: #ff0000;
-                text-align: center;
-
-                // width: auto;
-                // height: $navBar-height;
-                height: inherit;
-
-                position: absolute;
-                // top: $header-height;
-                left: 0;
-                // left: 50vw;
-                // z-index: -1;
-            }
-
-            /* #region - - - - - - - - - - - Ferda A separators... doesn't work here - - - - - - - - - - - */
-
-            // // A:before {
-            // .navItem:before {
-            // // .navItem:after {
-            //     border: 2px inset #ff0000;
-            //     // border-left: 0.5px solid #cccccc;
-            //     // border-right: 0.5px solid #cccccc;
-
-            //     content: "";
-            //     width: 100%;
-            //     height: 40%;
-
-            //     position: absolute;
-            //     left: 0;
-            //     right: 0;
-            //     // top: 30%;
-            //     top: $header-height + $navBar-height/3;
-            //     bottom: 0;
-            // }
-
-            /* #endregion - - - - - - - - - - - Ferda A separators... doesn't work here - - - - - - - - - - - */
-        }
-
-        /* #endregion -------------------- navBar -------------------- */
+        /* #endregion -------------------- .workNav -------------------- */
     }
 
-    /* #endregion -------------------- navBarContainer -------------------- */
+    /* #endregion -------------------- .navBarContainer -------------------- */
 }
 
 /* #endregion ========================= BASE ========================= */
@@ -534,21 +542,33 @@
 
             height: 50px;
 
-            /* #region -------------------- hed -------------------- */
+            /* #region -------------------- .hed -------------------- */
 
             .hed {
                 // border: 02px solid #0000ff;
 
                 // left: 0 !important;
 
-                .hed02, .contact {
+                // .hed01 {
+                // .hed02 {
+                .contact {
+                // .hed02, .contact {
                 // .hed01, .hed02, .contact {
                     display: none;
                 }
 
                 .hed01 {
                     font-size: 1.625em;
-                    bottom: -5%;
+                    // bottom: -5%;
+                    // left: 26.25vw;
+                    bottom: -35%;
+                    left: 26.25vw;
+                }
+
+                .hed02 {
+                // .contact {
+                    color: #000000;
+                    top: 40px;
                     left: 26.25vw;
                 }
 
@@ -560,15 +580,17 @@
                 }
             }
 
-            /* #endregion -------------------- hed -------------------- */
+            /* #endregion -------------------- .hed -------------------- */
 
 
-            /* #region -------------------- NAV -------------------- */
+            /* #region -------------------- .navBarContainer -------------------- */
 
             .navBarContainer {
                 // border: 1px solid #ff0000;
                 border: none;
-                background: none;
+
+                // background: none;
+                @include navbgGradient05();
 
                 font-size: 0.75em;
 
@@ -576,16 +598,25 @@
                 min-width: 100vw;
                 max-width: 100vw;
 
-                height: 6.25vh;
+                // height: 6.25vh;
+                height: 7.5vh;
 
                 // margin: -50px 0 0 0;
                 // top: 0;
 
                 // display: none;
 
+                // position: absolute;
+                // z-index: 99;
+
+
+                /* #region -------------------- .navBar -------------------- */
+
                 .navBar {
                     // border: 1px solid #00ff00;
+
                     background: none;
+                    // @include navbgGradient05();
 
                     font-size: 1.75em;
 
@@ -593,9 +624,11 @@
                     width: 100%;
                     height: inherit;
 
-                    // top: inherit;
-                    // top: 0;
-                    // right: 0;
+                    position: absolute;
+                    // // top: inherit;
+                    // // top: 0;
+                    // // right: 0;
+                    // z-index: 99;
 
                     grid-template-columns: repeat(1, auto);
 
@@ -618,7 +651,46 @@
                         // width: inherit !important;
                     }
                 }
+
+                /* #endregion -------------------- .navBar -------------------- */
+
+
+                /* #region -------------------- .workNav -------------------- */
+
+                .workNav {
+                    // border: 1px solid #ff00ff;
+
+                    width: 20vw;
+                    min-width: unset;
+                    max-width: unset;
+
+                    height: auto;
+
+                    margin: 0;
+                    padding: 0;
+
+                    top: 60px;
+                    // left: -80vw;
+                    // left: 80vw;
+                    // right: 0;
+
+                    .employerIcon {
+                        // border: 1px solid #00ffff;
+
+                        width: 100%;
+                        height: 7.5vh;
+
+                        // display: unset;
+                    }
+                }
+
+                /* #endregion -------------------- .workNav -------------------- */
             }
+
+            /* #endregion -------------------- .navBarContainer -------------------- */
+
+
+            /* #region -------------------- .navBurger -------------------- */
 
             .navBurger {
                 // border: 1px solid #00ff00;
@@ -666,7 +738,7 @@
                 }
             }
 
-            /* #endregion -------------------- NAV -------------------- */
+            /* #endregion -------------------- .navBurger -------------------- */
         }
     }
 
