--- a/src/stylesheets/Resume.scss
+++ b/src/stylesheets/Resume.scss
@@ -1,137 +1,307 @@
-/* #region ==================== VARIABLES ==================== */
-
-$body-width: 50vw;
-$body-min-width: 820px;
-// $body-max-width: 1200px;
-$body-max-width: 960px;
-
-// $workkNav-height: 80px;
-$workkNav-height: 100px;
-
-/* #endregion ==================== VARIABLES ==================== */
+@import './Global.scss';
 
 
-/* #region ==================== RESUME ==================== */
+/* #region ==================== BASE ==================== */
 
-.employerList {
-    // border: 1px solid #000000;
+.employerContainer * {
+    // border: 2px solid #00ffff;
 
     text-align: left;
+    line-height: 1.25em;
 
-    // width: 50%;
-    // width: 100%;
-    // max-width: 720px;
-    // max-width: 800px;
-    // max-width: 960px;
-    // max-width: 1024px;
-    // max-width: 1080px;
-
-    // margin: 100px auto;
+    margin: 0;
     // padding: 0;
+    padding: 0 0 0.125em 0;
+}
+
+.employerContainer {
+    // border: 2px solid #ff0000;
+
+    // letter-spacing: 0.0375em;
+
+    width: $body-width;
+    min-width: $body-min-width;
+    max-width: $body-max-width;
+
     margin: 0 auto;
-    // margin: 150px auto 0 auto;
-    // padding: 0 0 200px 100px;
-    padding: 0 0 150px 0;
-    // padding: 150px 0;
+    // margin: 120px auto 0 auto;
 
-    .employerItem {
-        // border: 2px solid #00ffff;
+    .employerList {
+        // border: 2px solid #00ff00;
 
-        width: 100%;
-        height: auto;
+        text-align: left;
 
-        margin: 0;
-        padding: 0 0 50px 0;
+        margin: 0 auto;
+        padding: 125px 0;
 
-        display: inline-block;
+        .employerItem {
+            // border: 1px solid #0000ff;
 
-        .logo {
-            // border: 2px solid #ff0000;
+            width: 100%;
+            height: auto;
 
-            width: 15%;
+            margin: 0;
+            // padding: 0 0 50px 0;
+            padding: 0 0 2.5em 0;
 
-            float: left;
+            display: inline-block;
 
-            margin: inherit;
-            padding: 0;
-        }
+            .logo {
+                // border: 2px solid #ff0000;
 
-        .employerInfo {
-            // border: 2px solid #ff0000;
+                width: 15%;
 
-            font-weight: bold;
+                float: left;
 
-            width: 80%;
-            height: 100%;
-
-            margin: inherit;
-            padding: 0;
-
-            float: right;
-
-            h1 {
-                // border: 2px solid #ffff00;
-
-                font-size: 1.5em;
-                // font-weight: bold;
-                text-align: inherit;
-
-                margin: inherit;
-                padding: inherit;
+                // margin: inherit;
+                // margin: 1.25% auto 0 auto;
+                // padding: 0;
             }
 
-            h2 {
-                // border: 2px solid #ff00ff;
-
-                font-size: 1.125em;
-                // font-weight: bold;
-                text-align: inherit;
-
-                width: 50%;
-
-                margin: inherit;
-                padding: inherit;
-                // padding: 0 0 10px 0;
-
-                display: inline-block;
-            }
-
-            .employerDates {
-                // border: 2px solid #00ffff;
+            .employerInfo {
+                // border: 2px solid #ff0000;
 
                 font-size: 1em;
                 // font-weight: bold;
-                text-align: right;
-                // letter-spacing: 0.025em;
+                // line-height: 1em;
+                letter-spacing: 0.05em;
 
-                width: 22.5%;
+                width: 80%;
+                height: 100%;
 
-                margin: inherit;
-                padding: inherit;
+                // margin: inherit;
+                // padding: 0;
 
-                // display: inline-block;
                 float: right;
-            }
 
-            ul {
-                margin: inherit;
-                padding: 15px 0;
+                h1 {
+                    // border: 2px solid #ffff00;
 
-                li {
+                    font-size: 1.5em;
                     // font-weight: bold;
-                    list-style: none;
+                    // text-align: inherit;
+
+                    // margin: inherit;
+                    // padding: inherit;
                 }
-            }
 
-            p {
-                // font-weight: bold;
-                // letter-spacing: 0.01em;
+                h2 {
+                    // border: 2px solid #ff00ff;
 
-                margin: inherit;
-                padding: 2.5px 0;
+                    font-size: 1.125em;
+                    // font-weight: bold;
+                    // text-align: inherit;
+
+                    width: 50%;
+
+                    // margin: inherit;
+                    // padding: inherit;
+                    // padding: 0 0 10px 0;
+
+                    display: inline-block;
+                }
+
+                .employerDates {
+                    // border: 2px solid #00ffff;
+
+                    // font-size: 1em;
+                    // font-weight: bold;
+                    text-align: right;
+                    // letter-spacing: 0.025em;
+
+                    width: 22.5%;
+
+                    // margin: inherit;
+                    // padding: inherit;
+
+                    // display: inline-block;
+                    float: right;
+                }
+
+                ul {
+                    // margin: inherit;
+                    // padding: 15px 0;
+
+                    li {
+                        // font-weight: bold;
+
+                        letter-spacing: 0.05em;
+
+                        padding-left: 0.625em;
+                        text-indent: -0.625em;
+
+                        list-style: none;
+                    }
+                }
+
+                p {
+                    // font-weight: bold;
+                    // letter-spacing: 0.05em;
+
+                    // margin: inherit;
+                    padding: 0.5em 0 0 0;
+                }
             }
         }
     }
 }
 
-/* #endregion ==================== RESUME ==================== */
+/* #endregion ==================== BASE ==================== */
+
+
+
+/* #region ========================= DESKTOPS: 1441px+ ========================= */
+
+@media  
+    only screen and (min-device-width: 1441px) 
+    { 
+        // .employerContainer {
+        //     border: 2px solid #ff0000;
+        // }
+    }
+
+/* #endregion ========================= DESKTOPS: 1441px+ ========================= */
+
+
+
+/* #region ========================= LAPTOPS: 992px+ ========================= */
+
+@media  
+    // only screen and (min-device-width: 992px) 
+    // only screen and (min-device-width: 992px), 
+    only screen and (max-device-width: 1440px) 
+    { 
+        // .employerContainer {
+        //     border: 2px solid #00ff00;
+        // }
+    }
+
+/* #endregion ========================= LAPTOPS: 992px+ ========================= */
+
+
+
+/* #region ========================= TABLETS: 768px ========================= */
+
+@media  
+    // only screen and (min-device-width: 768px) 
+    // only screen and (min-device-width: 768px), 
+    only screen and (max-device-width: 991px) 
+    { 
+        .employerContainer {
+            // border: 2px solid #0000ff;
+
+            // width: 75vw;
+            // min-width: 50vw;
+            // max-width: 80vw;
+
+            .employerList {
+                // border: 2px solid #00ff00;
+
+                margin: 0 0 0 5vw;
+                // padding: 80px 0;
+
+                .employerItem {
+                    // border: 1px solid #ff0000;
+
+                    .employerInfo {
+                        // border: 1px solid #00ff00;
+
+                        h1, h2 {
+                            letter-spacing: 0.005em;
+                        }
+
+                        h2 {
+                            // border: 1px solid #0000ff;
+                            width: 80%;
+                        }
+
+                        .employerDates {
+                            // border: 1px solid #ff00ff;
+                            // text-align: right;
+                            width: 17.5%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= TABLETS: 768px ========================= */
+
+
+
+/* #region ========================= MOBILE: 375px ========================= */
+
+@media  
+    // only screen and (min-device-width: 375px) 
+    // only screen and (min-device-width: 375px), 
+    only screen and (max-device-width: 767px) 
+    { 
+        .employerContainer {
+            // border: 2px solid #ff00ff;
+
+            width: 90vw;
+            min-width: 50vw;
+            max-width: 100vw;
+
+            .employerList {
+                // border: 2px solid #00ffff;
+
+                padding: 110px 0;
+                margin: 0;
+
+                .employerItem {
+                    // border: 1px solid #ff00ff;
+
+                    padding: 0 0 1em 0;
+
+                    position: relative;
+
+                    .logo {
+                        // border: 2px solid #ff0000;
+
+                        width: 18.75%;
+
+                        margin: 1.25% auto 0 auto;
+                    }
+
+                    .employerInfo {
+                        // border: 2px solid #ff0000;
+
+                        width: 76.25%;
+
+                        h1, h2 {
+                            letter-spacing: 0.005em;
+                            width: auto;
+                        }
+
+                        h1 {
+                            font-size: 1.375em;
+                        }
+
+                        h2 {
+                            font-size: 1.0625em;
+                        }
+
+                        .employerDates {
+                            text-align: left;
+
+                            width: auto;
+
+                            padding: 0.25em 0;
+
+                            float: unset;
+                        }
+
+                        p {
+                            font-size: 0.9375em;
+                            line-height: 1.5em;
+                            padding: 0.25em 0 0 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= MOBILE: 375px ========================= */
