--- a/src/stylesheets/Work.scss
+++ b/src/stylesheets/Work.scss
@@ -1,7 +1,9 @@
 @import './Global.scss';
 
 
-.workPage {
+/* #region ==================== BASE ==================== */
+
+.workContainer {
     // border: 2px solid #0000ff;
     // background: #eeeeee;
 
@@ -10,18 +12,22 @@
 
     margin: 0 auto;
     // padding: ($header-height + $navBar-height + $workkNav-height) 0 0 0;
-    padding: ($header-height + $navBar-height + $workkNav-height + 10) 0 0 0;
+    // padding: ($header-height + $navBar-height + $workkNav-height + 10) 0 0 0;
 
-    .workList {
-        // border: 2px solid #ff0000;
-        // background: #eeeeee;
+    position: absolute;
+    top: ($header-height + $navBar-height + $workkNav-height + 10);
+    left: 1.25vw;
 
-        width: 100%;
-        // width: 98%;
+    // .workList {
+    //     // border: 2px solid #ff0000;
+    //     // background: #eeeeee;
 
-        margin: 0 auto;
-        padding: 0;
-        // padding: 0 1vw;
+    //     width: 100%;
+    //     // width: 98%;
+
+    //     margin: 0 auto;
+    //     padding: 0;
+    //     // padding: 0 1vw;
 
         hr {
             margin: 10px 35%;
@@ -88,17 +94,16 @@
 
                         // @include navbgGradient02();
 
-                        letter-spacing: .025em;
+                        letter-spacing: .05em;
 
                         margin: 0;
-                        padding: 15px;
+                        padding: 3.75%;
                     }
                 }
             }
         }
-    }
+    // }
 }
-
 
 .note {
     // border: 2px solid #0000ff;
@@ -110,3 +115,113 @@
     margin: o;
     padding: 0;
 }
+
+/* #endregion ==================== BASE ==================== */
+
+
+
+/* #region ========================= DESKTOPS: 1441px+ ========================= */
+
+@media  
+    only screen and (min-device-width: 1441px) 
+    { 
+    }
+
+/* #endregion ========================= DESKTOPS: 1441px+ ========================= */
+
+
+
+/* #region ========================= LAPTOPS: 992px+ ========================= */
+
+@media  
+    // only screen and (min-device-width: 992px) 
+    // only screen and (min-device-width: 992px), 
+    only screen and (max-device-width: 1440px) 
+    { 
+    }
+
+/* #endregion ========================= LAPTOPS: 992px+ ========================= */
+
+
+
+/* #region ========================= TABLETS: 768px ========================= */
+
+@media  
+    // only screen and (min-device-width: 768px) 
+    // only screen and (min-device-width: 768px), 
+    only screen and (max-device-width: 991px) 
+    { 
+        .workContainer {
+            // border: 1px solid #ff00ff;
+
+            .masonrySection {
+                // border: 2px solid #ff00ff;
+
+                .masonry {
+                    // border: 2px solid #ff00ff;
+
+                    .workItem {
+                        // border: 2px solid #00ffff;
+
+                        .masonryInfo {
+                            // border: 2px solid #00ffff;
+
+                            font-size: 0.875em;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= TABLETS: 768px ========================= */
+
+
+
+/* #region ========================= MOBILE: 375px ========================= */
+
+@media  
+    // only screen and (min-device-width: 375px) 
+    // only screen and (min-device-width: 375px), 
+    only screen and (max-device-width: 767px) 
+    { 
+        .workContainer {
+            // border: 1px solid #ff00ff;
+
+            width: 70vw;
+            // width: 72.5vw;
+            min-width: 50vw;
+            max-width: 100vw;
+
+            // margin: 0 3.75vw;
+            // margin: 0 2.5vw;
+            padding: 0;
+
+            position: absolute;
+            top: 110px;
+            // top: 120px;
+            left: 25vw;
+
+            .masonrySection {
+                // border: 2px solid #ff00ff;
+
+                .masonry {
+                    // border: 2px solid #ff00ff;
+
+                    .workItem {
+                        // border: 2px solid #00ffff;
+
+                        padding: 0 0 20px 0;
+
+                        .masonryInfo {
+                            // border: 2px solid #00ffff;
+
+                            font-size: 1em;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+/* #endregion ========================= MOBILE: 375px ========================= */
