--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -76,6 +76,7 @@
 
             width: auto;
             // height: inherit;
+            height: 75%;
 
             // margin: 0;
             // padding: inherit;
@@ -86,7 +87,7 @@
 
             position: absolute;
             // bottom: -22.5%;
-            bottom: -16.25%;
+            bottom: 0;
             left: 310px;
 
             display: table-cell;
