WORK: added modals - work.json: please check/fix links (e.g. mimi) HEADER: still having routing issues (setActiveNavDiv)

--- a/src/stylesheets/Global.scss
+++ b/src/stylesheets/Global.scss
@@ -1,4 +1,4 @@
-/* #region -------------------- VARIABLES -------------------- */
+/* #region ========================= VARIABLES ========================= */
 
 $body-width: 50vw;
 $body-min-width: 820px;
@@ -21,9 +21,9 @@ $workkNav-height: 60px;
 // $workkNav-height: 100px;
 
 
-/* #region - - - - - - - - - - - VARIABLES: MIXINS - REF: https://cssgradient.io - - - - - - - - - - - */
+/* #region - - - - - - - - - - - VARIABLES: BG MIXINS - REF: https://cssgradient.io - - - - - - - - - - - */
 
-@mixin navbgGradient01() { 
+@mixin bgGradient01() { 
     background: rgb(255,255,255);
     background: -moz-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
     background: -webkit-linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
@@ -32,7 +32,7 @@ $workkNav-height: 60px;
     // mix-blend-mode: multiply;
 }
 
-@mixin navbgGradient02() { 
+@mixin bgGradient02() { 
     background: rgb(230,230,230);
     background: -moz-linear-gradient(90deg, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 20%, rgba(230,230,230,1) 80%, rgba(230,230,230,0) 100%);
     background: -webkit-linear-gradient(90deg, rgba(230,230,230,0) 0%, rgba(230,230,230,1) 20%, rgba(230,230,230,1) 80%, rgba(230,230,230,0) 100%);
@@ -41,7 +41,7 @@ $workkNav-height: 60px;
     mix-blend-mode: multiply;
 }
 
-@mixin navbgGradient03() { 
+@mixin bgGradient03() { 
     background: rgb(230,230,230);
     background: -moz-linear-gradient(90deg, rgba(230,230,230,1) 0%, rgba(230,230,230,0) 20%, rgba(230,230,230,0) 80%, rgba(230,230,230,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(230,230,230,1) 0%, rgba(230,230,230,0) 20%, rgba(230,230,230,0) 80%, rgba(230,230,230,1) 100%);
@@ -50,7 +50,7 @@ $workkNav-height: 60px;
     mix-blend-mode: multiply;
 }
 
-@mixin navbgGradient04() { 
+@mixin bgGradient04() { 
     background: rgb(230,230,230);
     background: -moz-linear-gradient(90deg, rgba(210,210,210,1) 0%, rgba(210,210,210,0) 40%, rgba(210,210,210,0) 60%, rgba(210,210,210,1) 100%);
     background: -webkit-linear-gradient(90deg, rgba(210,210,210,1) 0%, rgba(210,210,210,0) 40%, rgba(210,210,210,0) 60%, rgba(210,210,210,1) 100%);
@@ -59,7 +59,7 @@ $workkNav-height: 60px;
     mix-blend-mode: multiply;
 }
 
-@mixin navbgGradient05() { 
+@mixin bgGradient05() { 
     // background: rgb(255,255,255);
     // background: -moz-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
     // background: -webkit-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
@@ -75,7 +75,22 @@ $workkNav-height: 60px;
     // mix-blend-mode: screen;
 }
 
-/* #endregion - - - - - - - - - - - VARIABLES: MIXINS - REF: https://cssgradient.io - - - - - - - - - - - */
+/* #endregion - - - - - - - - - - - VARIABLES: BG MIXINS - REF: https://cssgradient.io - - - - - - - - - - - */
+
+
+/* #region - - - - - - - - - - - VARIABLES: SVG FILL MIXINS - REF: https://cssgradient.io - OOPS! CAN'T use css to give SVGs gradient fills; must use inline <linearGradient> - - - - - - - - - - - */
+
+@mixin fillGradient01() { 
+    fill: rgb(255,255,255);
+    fill: -moz-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%);
+    fill: -webkit-linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%);
+    fill: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
+
+    // mix-blend-mode: screen;
+}
+
+/* #endregion - - - - - - - - - - - VARIABLES: SVG FILL MIXINS - REF: https://cssgradient.io - OOPS! CAN'T use css to give SVGs gradient fills; must use inline <linearGradient> - - - - - - - - - - - */
 
 
 /* #region - - - - - - - - - - - VARIABLES: EXPORT - - - - - - - - - - - */
@@ -111,7 +126,7 @@ $workkNav-height: 60px;
 
 /* #endregion - - - - - - - - - - - VARIABLES: EXPORT - - - - - - - - - - - */
 
-/* #endregion -------------------- VARIABLES -------------------- */
+/* #endregion ========================= VARIABLES ========================= */
 
 
 /* #region ========================= GLOBAL ========================= */
@@ -134,6 +149,13 @@ $workkNav-height: 60px;
 
 img {
 	border: 0;
+
+    // user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 /* #endregion ========================= GLOBAL ========================= */
