--- a/src/stylesheets/Work.scss
+++ b/src/stylesheets/Work.scss
@@ -4,7 +4,7 @@
 /* #region ==================== BASE ==================== */
 
 .workContainer {
-    // border: 2px solid #0000ff;
+    // border: 2px solid #ff0000;
     // background: #eeeeee;
 
     // width: 100vw;
@@ -18,94 +18,313 @@
     top: ($header-height + $navBar-height + $workkNav-height + 10);
     left: 1.25vw;
 
-    // .workList {
-    //     // border: 2px solid #ff0000;
-    //     // background: #eeeeee;
+    hr {
+        margin: 10px 35%;
+    }
 
-    //     width: 100%;
-    //     // width: 98%;
+    .bannerContainer {
+        // border: 2px solid #ff0000;
+        // background-color: #00ff00;
+        // opacity: 0.25;
 
-    //     margin: 0 auto;
-    //     padding: 0;
-    //     // padding: 0 1vw;
+        color: #ff00ff;
+        // font-size: 2em;
+        font-weight: bolder;
+        // line-height: 1em;
+        // text-align: center;
 
-        hr {
-            margin: 10px 35%;
-        }
+        margin: 0;
+        padding: 0;
 
-        .importContainer {
-            // border: 2px solid #ff0000;
-            // background-color: #00ff00;
-            // opacity: 0.25;
+        position: absolute;
+        // top: 0;
+        // left: 0;
+        // right: 0;
+        // bottom: 0;
+        z-index: 9;
 
-            color: #ff00ff;
-            // font-size: 2em;
-            font-weight: bolder;
-            // line-height: 1em;
-            // text-align: center;
+        .importedContent {
+            // border: 2px solid #00ff00;
 
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
-
-            position: absolute;
-            // top: 0;
-            // left: 0;
-            // right: 0;
-            // bottom: 0;
-            z-index: 9;
-
-            .importedContent {
-                // border: 2px solid #00ff00;
-
-                margin: 0 auto;
-                padding: 0;
-            }
         }
+    }
 
-        .masonrySection {
+    .masonrySection {
+        // border: 2px solid #ff00ff;
+
+        margin: 0;
+        padding: 0 0 100px 0;
+
+        .masonry {
             // border: 2px solid #ff00ff;
 
-            margin: 0;
-            padding: 0 0 100px 0;
+            .workItem {
+                // border: 2px solid #ff0000;
 
-            .masonry {
-                // border: 2px solid #ff00ff;
+                margin: 0;
+                padding: 0;
 
-                .workItem {
+                .masonryImg {
+                    // border: 2px solid #00ffff;
+
+                    width: 100%;
+
+                    display: block;
+
+                    // position: absolute;
+                    // z-index: -999;
+
+                    cursor: pointer;
+                }
+
+                .printImg {
                     // border: 2px solid #ff0000;
 
+                    width: 100%;
+
+                    display: block;
+
+                    // position: absolute;
+                    // z-index: -999;
+
+                    // cursor: pointer;
+
+                    // opacity: 0.375;
+                }
+
+                .missingImg {
+                    // border: 2px solid #ff0000;
+
+                    width: 100%;
+
+                    display: block;
+
+                    // position: absolute;
+                    // z-index: -999;
+
+                    // cursor: pointer;
+
+                    opacity: 0.375;
+                }
+
+                .masonryInfo {
+                    // border: 2px solid #00ffff;
+                    border: 1px solid #eeeeee;
+                    // border-top: 2px solid #ff0000;
+                    border-top: none;
+
+                    // background: #eeeeee;
+                    @include bgGradient03();
+
+                    letter-spacing: .0375em;
+
                     margin: 0;
-                    padding: 0;
+                    // padding: 3.75% 6.25%;
+                    padding: 10px 20px;
+                }
 
-                    .masonryImg {
-                        // border: 2px solid #00ffff;
+                .extraInfo {
+                    // border: 2px solid #00ffff;
+                    // background: #eeeeee;
 
-                        width: 100%;
+                    font-size: 0.8125em;
 
-                        display: block;
-
-                        // position: absolute;
-                        // z-index: -999;
-
-                        cursor: pointer;
-                    }
-
-                    .masonryInfo {
-                        // border: 2px solid #00ffff;
-                        background: #eeeeee;
-
-                        // @include navbgGradient02();
-
-                        letter-spacing: .0375em;
-
-                        margin: 0;
-                        // padding: 3.75% 6.25%;
-                        padding: 10px 20px;
-                    }
+                    margin: 0;
+                    // padding: 3.75% 6.25%;
+                    padding: 10px 20px;
                 }
             }
         }
-    // }
+    }
+
+    // .iframeContainer {
+    .iframeContainerOpen {
+        // border: 2px solid #ff0000;
+
+        background: rgba($color: #000000, $alpha: 0.5);
+
+        width: 100vw;
+        height: 100vh;
+        // width: 100%;
+        // // height: 100%;
+        // height: auto;
+
+        position: fixed;
+        top: 0;
+        left: 0;
+        // z-index: 0;
+        z-index: 999;
+
+        cursor: pointer;
+
+        .webiFrame {
+        // .webiFrameOpen {
+            // border: 2px solid #0000ff;
+            border: none;
+
+            // background: none;
+            // background: rgba($color: #000000, $alpha: 0.5);
+
+            width: 50vw;
+            height: 50vh;
+
+            // width: 0;
+            // height: 0;
+
+            margin: 0 auto;
+            padding: 0;
+
+            // position: fixed;
+            position: relative;
+            // // top: ($header-height + $navBar-height + $workkNav-height + 10);
+            // top: 12.5vh;
+            // z-index: 999;
+
+            // -ms-transform: scale(0.875);
+            // -moz-transform: scale(0.875);
+            // -o-transform: scale(0.875);
+            // -webkit-transform: scale(0.875);
+            // transform: scale(0.875);
+            
+            // -ms-transform-origin: 0 0;
+            // -moz-transform-origin: 0 0;
+            // -o-transform-origin: 0 0;
+            // -webkit-transform-origin: 0 0;
+            // transform-origin: 0 0;
+        }
+
+        // .webiFrameClosed {
+        //     border: 2px solid #0000ff;
+        //     // border: none;
+
+        //     width: 0;
+        //     height: 0;
+
+        //     margin: 0 auto;
+        //     padding: 0;
+
+        //     position: fixed;
+        //     top: 0;
+        //     left: 0;
+        //     z-index: 0;
+
+        //     display: none;
+        // }
+    }
+
+    .iframeContainerClosed {
+        // border: 2px solid #ff0000;
+
+        display: none;
+    }
+
+    .videoContainerOpen {
+        // border: 2px solid #ff0000;
+        // border: none;
+
+        background: rgba($color: #000000, $alpha: 0.5);
+
+        width: 100vw;
+        height: 100vh;
+
+        margin: 0 auto;
+        padding: 0;
+
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 999;
+
+        cursor: pointer;
+
+        .videoPlayer {
+            // border: 2px solid #00ff00;
+            // background: #999999;
+
+            // height: 80%;
+            // height: 50%;
+
+            padding: 0vh 0;
+
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            -ms-transform: scale(0.875);
+            -moz-transform: scale(0.875);
+            -o-transform: scale(0.875);
+            -webkit-transform: scale(0.875);
+            transform: scale(0.875);
+            
+            // -ms-transform-origin: 0 0;
+            // -moz-transform-origin: 0 0;
+            // -o-transform-origin: 0 0;
+            // -webkit-transform-origin: 0 0;
+            // transform-origin: 0 0;
+        }
+    }
+
+    .videoContainerClosed {
+        // border: 2px solid #ff0000;
+        // border: none;
+
+        // width: 0;
+        // height: 0;
+
+        // margin: 0 auto;
+        // padding: 0;
+
+        // position: fixed;
+        // top: 0;
+        // left: 0;
+        // z-index: 0;
+
+        display: none;
+    }
+
+    .toggleBtnDiv {
+        // border: 2px solid #ff0000;
+        // background: #ffffff;
+
+        text-align: right;
+
+        width: 12.5vw;
+        width: auto;
+
+        padding: 20px 10px;
+
+        position: fixed;
+        right: 1.5vw;
+        z-index: 9999;
+        // float: right;
+
+        p {
+            padding: 5px;
+        }
+
+        // .toggleBtn {
+        .toggleBtnShow {
+            // border: 2px solid #00ff00;
+
+            // display: inline;
+
+            position: fixed;
+            right: 1.5vw;
+            z-index: 9999;
+        }
+
+        .toggleBtnHide {
+            // border: 2px solid #0000ff;
+
+            display: none;
+
+            // position: fixed;
+            // right: 1.5vw;
+            // z-index: 0;
+        }
+    }
 }
 
 .note {
