WORK - got rid of moveBanner... for now - re-positioning done "inline" - banners jumping on masonry breakpoints

--- a/src/stylesheets/About.scss
+++ b/src/stylesheets/About.scss
@@ -582,7 +582,8 @@
                 .thoughtBubbleText {
                     // border: 2px solid #00ff00;
 
-                    font-size: 1em;
+                    // font-size: 1em;
+                    font-size: 0.875em;
                     line-height: 1.375em;
                     text-align: center;
 
