--- a/src/stylesheets/Work.scss
+++ b/src/stylesheets/Work.scss
@@ -22,35 +22,6 @@
         margin: 10px 35%;
     }
 
-    .bannerContainer {
-        // border: 2px solid #ff0000;
-        // background-color: #00ff00;
-        // opacity: 0.25;
-
-        color: #ff00ff;
-        // font-size: 2em;
-        font-weight: bolder;
-        // line-height: 1em;
-        // text-align: center;
-
-        margin: 0;
-        padding: 0;
-
-        position: absolute;
-        // top: 0;
-        // left: 0;
-        // right: 0;
-        // bottom: 0;
-        z-index: 9;
-
-        .importedContent {
-            // border: 2px solid #00ff00;
-
-            margin: 0 auto;
-            padding: 0;
-        }
-    }
-
     .masonrySection {
         // border: 2px solid #ff00ff;
 
@@ -139,8 +110,57 @@
         }
     }
 
-    // .iframeContainer {
-    .iframeContainerOpen {
+    .bannerContainer {
+        // border: 2px solid #ff0000;
+        // background-color: #00ff00;
+        // opacity: 0.25;
+
+        color: #ff00ff;
+        // font-size: 2em;
+        font-weight: bolder;
+        // line-height: 1em;
+        // text-align: center;
+
+        margin: 0;
+        padding: 0;
+
+        position: absolute;
+        // top: 0;
+        // left: 0;
+        // right: 0;
+        // bottom: 0;
+        z-index: 9;
+
+        .importedContent {
+            // border: 2px solid #00ff00;
+
+            margin: 0 auto;
+            padding: 0;
+        }
+    }
+
+    .banneriFrame, .banneriFrameOpen {
+        // border: 2px solid #0000ff;
+        border: none;
+
+        // width: 300px;
+        // height: 250px;
+
+        margin: 0 auto;
+        padding: 0;
+
+        position: absolute;
+        z-index: 99;
+    }
+
+    .banneriFrameClosed {
+        border: 2px solid #ff0000;
+
+        display: none;
+        z-index: 0;
+    }
+
+    .webiFrameContainer, .webiFrameContainerOpen {
         // border: 2px solid #ff0000;
 
         background: rgba($color: #000000, $alpha: 0.5);
@@ -214,8 +234,11 @@
         // }
     }
 
-    .iframeContainerClosed {
-        // border: 2px solid #ff0000;
+    .webiFrameContainerClosed {
+        border: 2px solid #ff0000;
+
+        position: absolute;
+        z-index: 0;
 
         display: none;
     }
@@ -269,7 +292,7 @@
     }
 
     .videoContainerClosed {
-        // border: 2px solid #ff0000;
+        border: 2px solid #ff0000;
         // border: none;
 
         // width: 0;
@@ -283,6 +306,9 @@
         // left: 0;
         // z-index: 0;
 
+        position: absolute;
+        z-index: 0;
+
         display: none;
     }
 
@@ -292,13 +318,17 @@
 
         text-align: right;
 
-        width: 12.5vw;
-        width: auto;
+        // width: 5vw;
+        // width: auto;
+        width: 100px;
+        height: 30px;
 
-        padding: 20px 10px;
+        // padding: 20px 10px;
 
         position: fixed;
-        right: 1.5vw;
+        top: 10%;
+        // right: 20vw;
+        right: 10%;
         z-index: 9999;
         // float: right;
 
@@ -310,10 +340,18 @@
         .toggleBtnShow {
             // border: 2px solid #00ff00;
 
+            width: 100%;
+            height: 100%;
+
+            margin: 0;
+            padding: 0;
+
             // display: inline;
 
-            position: fixed;
-            right: 1.5vw;
+            position: absolute;
+            top: 0;
+            left: 0;
+            // right: 1.5vw;
             z-index: 9999;
         }
 
@@ -322,9 +360,9 @@
 
             display: none;
 
-            // position: fixed;
+            position: fixed;
             // right: 1.5vw;
-            // z-index: 0;
+            z-index: 0;
         }
     }
 }
