"cleaned up" a bit...

--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -1,21 +1,7 @@
-/* #region ==================== VARIABLES ==================== */
-
-$body-width: 50vw;
-$body-min-width: 820px;
-// $body-max-width: 1200px;
-$body-max-width: 960px;
-
-// $workkNav-height: 80px;
-$workkNav-height: 100px;
-
-/* #endregion ==================== VARIABLES ==================== */
+@import './Global.scss';
 
 
-// .homeImgHolder {
-//     // border: 2px solid #ffff00;
-
-//     width: 100%;
-// }
+/* #region ==================== VIDEO ==================== */
 
 video, .homeImgHolder {
     // border: 2px solid #ffff00;
@@ -33,3 +19,37 @@ video, .homeImgHolder {
     transform: translate(-50%, -50%);
     z-index: -1;
 }
+
+/* #endregion ==================== VIDEO ==================== */
+
+
+
+/* #region ==================== LOGO ==================== */
+
+.logo {
+    // border: 2px solid #ff0000;
+    background: #ff0000;
+
+    width: 90%;
+    // max-width: 80%;
+
+    margin: 0 auto;
+    padding: 0;
+
+    position: absolute;
+    left: 5%;
+    top: $header-height + $workkNav-height;
+}
+
+/* #endregion ==================== LOGO ==================== */
+
+
+
+/* #region ==================== CANVAS ==================== */
+
+Canvas {
+    width: 100vw;
+    height: 100vh;
+}
+
+/* #endregion ==================== CANVAS ==================== */
