- WORK: added tertiary navigation for workPod sections - npm run deploy

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -53,6 +53,8 @@ html, body, #root, #rootContainer {
 
     margin: 0;
     padding: 0;
+
+    scroll-behavior: smooth;
 }
 
 /* #endregion ==================== GLOBAL ==================== */
