--- a/src/stylesheets/Work.scss
+++ b/src/stylesheets/Work.scss
@@ -3,6 +3,14 @@
 
 /* #region ==================== BASE ==================== */
 
+// :target:before {
+#bannerPodID:before, #webPodID::before, #printPodID:before {
+    content: "";
+    display: block;
+    height: 215px;
+    margin: -215px 0 0 0;
+}
+
 .workContainer {
     // border: 2px solid #ff0000;
     // background: #eeeeee;
@@ -15,11 +23,57 @@
     // padding: ($header-height + $navBar-height + $workkNav-height + 10) 0 0 0;
 
     position: absolute;
-    top: ($header-height + $navBar-height + $workkNav-height + 10);
+    // top: ($header-height + $navBar-height + $workkNav-height + 10);
+    top: ($header-height + $navBar-height + $workkNav-height + 10 + 45);
     left: 1.25vw;
 
     hr {
         margin: 10px 35%;
+    }
+
+    .sectionNav {
+        // border: 2px solid #ff0000;
+        border-top: 1px solid #cccccc;
+        border-bottom: 1px solid #cccccc;
+
+        @include bgGradient01();
+
+        width: $body-width;
+        min-width: $body-min-width;
+        max-width: $body-max-width;
+
+        // width: ($body-width * 0.5);
+        // min-width: ($body-min-width * 0.5);
+        // max-width: ($body-max-width * 0.5);
+
+        text-align: center;
+
+        margin: -50px auto 0 auto;
+        padding: 5px;
+        // padding: 5px 0 10px 0;
+
+        position: fixed;
+        left: 50%;
+        transform: translate(-50%, 0);
+        z-index: 999;
+
+        a {
+            color: #000000;
+            text-decoration: none;
+
+            p {
+                // border: 2px solid #0000ff;
+                border-left: 1px solid #cccccc;
+                border-right: 1px solid #cccccc;
+
+                font-size: 1.125em;
+                text-align: center;
+                letter-spacing: 0.0125em;
+
+                padding: 0 10px;
+                display: inline;
+            }
+        }
     }
 
     .masonrySection {
